[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Ship/Weapons/Turret203.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/SpaceStation/OrbitalGun/stage4.png" type="Texture" id=2]
[ext_resource path="res://Assets/SpaceStation/OrbitalGun/stage3.png" type="Texture" id=3]
[ext_resource path="res://Assets/SpaceStation/OrbitalGun/stage1.png" type="Texture" id=4]
[ext_resource path="res://Assets/SpaceStation/OrbitalGun/stage2.png" type="Texture" id=5]
[ext_resource path="res://Assets/SpaceStation/OrbitalGun/OrbitalGun.gd" type="Script" id=6]
[ext_resource path="res://Assets/Particles/corona.png" type="Texture" id=7]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.488889, 1 )
colors = PoolColorArray( 1, 0.686275, 0.278431, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.56
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
color_ramp = SubResource( 2 )

[node name="OrbitalGun" type="Node2D"]
script = ExtResource( 6 )

[node name="s4" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.323467, 0.323467 )
texture = ExtResource( 2 )

[node name="positions" type="Node2D" parent="s4"]

[node name="s1-1" type="Position2D" parent="s4/positions"]
position = Vector2( 57.3493, -33.793 )

[node name="s1-2" type="Position2D" parent="s4/positions"]
position = Vector2( -58.3761, 34.5437 )

[node name="s1-3" type="Position2D" parent="s4/positions"]
position = Vector2( 40.276, 52.9584 )

[node name="s1-4" type="Position2D" parent="s4/positions"]
position = Vector2( -36.6049, -56.0698 )

[node name="s1-5" type="Position2D" parent="s4/positions"]
position = Vector2( 0.175354, 42.3373 )

[node name="s1-6" type="Position2D" parent="s4/positions"]
position = Vector2( -0.0387573, -56.062 )

[node name="s3" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.323467, 0.323467 )
texture = ExtResource( 3 )

[node name="positions" type="Node2D" parent="s3"]

[node name="s1-1" type="Position2D" parent="s3/positions"]
position = Vector2( 47.5409, -152.774 )

[node name="s1-2" type="Position2D" parent="s3/positions"]
position = Vector2( -31.3859, -97.5789 )

[node name="s1-3" type="Position2D" parent="s3/positions"]
position = Vector2( -148.267, 50.2289 )

[node name="s1-4" type="Position2D" parent="s3/positions"]
position = Vector2( 156.107, 41.202 )

[node name="s1-5" type="Position2D" parent="s3/positions"]
position = Vector2( -152.245, -46.0085 )

[node name="s1-6" type="Position2D" parent="s3/positions"]
position = Vector2( 101.449, -30.3824 )

[node name="s1-7" type="Position2D" parent="s3/positions"]
position = Vector2( -26.75, 98.3606 )

[node name="s1-8" type="Position2D" parent="s3/positions"]
position = Vector2( 33.6021, 92.943 )

[node name="s1-9" type="Position2D" parent="s3/positions"]
position = Vector2( -55.5409, -37.6161 )

[node name="s1-10" type="Position2D" parent="s3/positions"]
position = Vector2( 59.7845, 35.8619 )

[node name="s2" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.323467, 0.323467 )
texture = ExtResource( 5 )

[node name="positions" type="Node2D" parent="s2"]

[node name="s1-1" type="Position2D" parent="s2/positions"]
position = Vector2( 24.8359, -65.5711 )

[node name="s1-2" type="Position2D" parent="s2/positions"]
position = Vector2( 102.767, -31.012 )

[node name="s1-3" type="Position2D" parent="s2/positions"]
position = Vector2( -56.1831, 79.6542 )

[node name="s1-4" type="Position2D" parent="s2/positions"]
position = Vector2( -147.578, 44.3056 )

[node name="s1-5" type="Position2D" parent="s2/positions"]
position = Vector2( -70.2535, -11.8929 )

[node name="s1-6" type="Position2D" parent="s2/positions"]
position = Vector2( 45.3401, -155.026 )

[node name="s1" type="Sprite" parent="."]
scale = Vector2( 0.323467, 0.323467 )
texture = ExtResource( 4 )

[node name="positions" type="Node2D" parent="s1"]

[node name="s1-1" type="Position2D" parent="s1/positions"]
position = Vector2( 0.544403, -69.7324 )

[node name="s1-2" type="Position2D" parent="s1/positions"]
position = Vector2( 66.8507, 0.167526 )

[node name="s1-3" type="Position2D" parent="s1/positions"]
position = Vector2( -66.7887, 0.964798 )

[node name="s1-4" type="Position2D" parent="s1/positions"]
position = Vector2( -0.283844, 66.7809 )

[node name="s1-5" type="Position2D" parent="s1/positions"]
position = Vector2( 22.4289, -28.6204 )

[node name="s1-6" type="Position2D" parent="s1/positions"]
position = Vector2( -28.6282, 22.7902 )

[node name="WeldTime" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="WeldTime2" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="projectTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="report" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Team1" type="Node2D" parent="."]
scale = Vector2( 0.323467, 0.323467 )

[node name="Particles2D" type="Particles2D" parent="Team1"]
amount = 25
explosiveness = 0.54
process_material = SubResource( 3 )

[node name="Corona" type="Sprite" parent="Team1"]
modulate = Color( 0.572549, 0.929412, 0.988235, 0.231373 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="Team2" type="Node2D" parent="."]
scale = Vector2( 0.323467, 0.323467 )

[node name="Particles2D" type="Particles2D" parent="Team2"]
amount = 25
explosiveness = 0.54
process_material = SubResource( 3 )

[node name="Corona" type="Sprite" parent="Team2"]
modulate = Color( 0.572549, 0.929412, 0.988235, 0.231373 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="Turret203" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 0.389496, 0.322309 )
scale = Vector2( 0.116835, 0.116835 )
